--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Aplikasi Katalog Kucing</string>
+    <string name="back_button">Back button</string>
+    <string name="adopt_description">HAI SELAMAT DATANG DI FELINE FACTS\nTERTARIK UNTUK MENGADOPSI KUCING?\nSILAHKAN KLIK TOMBOL DI BAWAH UNTUK MENJELAHINYA</string>
+    <string name="explore_button">Jelajahi</string>
+    <string name="welcome_text">Welcome</string>
+    <string name="home_text">Kenali Dan Cintai\nKucing Lebih Dekat</string>
 </resources>
