--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,19 @@
     <string name="explore_button">Jelajahi</string>
     <string name="welcome_text">Welcome</string>
     <string name="home_text">Kenali Dan Cintai\nKucing Lebih Dekat</string>
+    <string name="kenali_dan_cintai_nkucing_lebih_dekat">Kenali Dan Cintai\nKucing Lebih Dekat</string>
+    <string name="welcome">Welcome</string>
+    <string name="back_buttonn">Back button</string>
+    <string name="anggita_setiawati">Anggita Setiawati</string>
+    <string name="detail_profile">Detail Profile</string>
+    <string name="nim_f55123092">NIM: F55123092</string>
+    <string name="program_studi_teknologi_informasi">Program Studi: Teknologi Informasi</string>
+    <string name="sri_aswanti">Sri Aswanti</string>
+    <string name="detail_profilee">Detail Profile</string>
+    <string name="nim_f55123075">NIM: f55123075</string>
+    <string name="program_studi_teknologi_informasi2">Program Studi: Teknologi Informasi</string>
+    <string name="muh_rifky">Muh. Rifky</string>
+    <string name="detail_profile3">Detail Profile</string>
+    <string name="nim_f55123091">NIM: F55123091</string>
+    <string name="program_studi_teknologi_informasi3">Program Studi: Teknologi Informasi</string>
 </resources>
